--- a/Tutorials/ReditClone/src/main/resources/templates/mailTemplate.html
+++ b/Tutorials/ReditClone/src/main/resources/templates/mailTemplate.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--xmlns used to introduce xml properties to HTML file-->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head></head>
-<body>
-    <span th:text="${message}"></span>
-</body>
+    <head>
+    </head>
+    <body>
+        <span th:text="${message}"></span>
+    </body>
 </html>
