--- a/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.html
@@ -13,7 +13,7 @@
             </a>
         </div>
         <div class="float-right">
-            <a routerLink="/signup" class="float-right signup mr-2">Sign up</a>
+            <a routerLink="/signup" class="float-right signup me-2">Sign up</a>
             <a routerLink="/login" class="float-right login mr-2">Login</a>
         </div>
     </nav>
