--- a/Tutorials/redditclone/reddit-frontend/src/app/auth/signup/signup.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/auth/signup/signup.component.html
@@ -7,32 +7,41 @@
                     <h4>Register</h4>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form [formGroup]="signupForm" (ngSubmit)="signup()">
                         <div class="form-group row mb-4">
                             <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
                                 Address</label>
                             <div class="col-md-6">
-                                <input type="text" id="email_address" class="form-control" name="email-address" required
+                                <input type="text" formControlName="email" id="email_address" class="form-control" name="email-address" required
                                     autofocus>
+                                <span *ngIf="!signupForm.get('email')?.valid && signupForm.get('email')?.touched">
+                                  Please provide a valid email
+                                </span>
                             </div>
                         </div>
 
                         <div class="form-group row mb-4">
                             <label class="col-md-4 col-form-label text-md-right">User Name</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control" required autofocus>
+                                <input type="text" class="form-control" formControlName="username" required autofocus>
+                                <span *ngIf="!signupForm.get('username')?.valid && signupForm.get('username')?.touched">
+                                  Please provide a valid email
+                                </span>
                             </div>
                         </div>
 
                         <div class="form-group row mb-4">
                             <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
                             <div class="col-md-6">
-                                <input type="password" id="password" class="form-control" name="password" required>
+                                <input type="password" formControlName="password" id="password" class="form-control" name="password" required>
+                                <span *ngIf="!signupForm.get('password')?.valid && signupForm.get('password')?.touched">
+                                  Please provide a valid password
+                                </span>
                             </div>
                         </div>
 
                         <span class="col-md-6 offset-md-4 mb-4">
-                            <button type="submit" class="sign-up">
+                            <button type="submit" class="sign-up" [disabled]="!signupForm.valid">
                                 Sign Up
                             </button>
                             <span style="padding-left: 15px">Existing user? <a routerLink="/login">Log In</a></span>
