before adding validation

--- a/Tutorials/redditclone/reddit-frontend/src/app/auth/signup/signup.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/auth/signup/signup.component.html
@@ -25,7 +25,7 @@
                             <div class="col-md-6">
                                 <input type="text" class="form-control" formControlName="username" required autofocus>
                                 <span *ngIf="!signupForm.get('username')?.valid && signupForm.get('username')?.touched">
-                                  Please provide a valid email
+                                  Please provide a valid username
                                 </span>
                             </div>
                         </div>
