--- a/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.scss
+++ b/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.scss
@@ -10,16 +10,16 @@ nav{
     width: 50px;
 }
 
-.reddit-text{        
+.reddit-text{
     font-weight: 700;
     height: 50px;
-    width: 50px;    
+    width: 50px;
 }
 .logo{
     text-decoration: none;
 }
 
-.login, .signup{    
+.login, .signup{
     background-color: transparent;
     border-color: #0079D3;
     color: #0079D3;
@@ -36,7 +36,7 @@ nav{
     line-height: 24px;
     text-transform: uppercase;
     padding: 3px 16px;
-    opacity: 1;  
+    opacity: 1;
 }
 .signup{
     background-color: #0079D3;
@@ -45,4 +45,11 @@ nav{
     &:hover{
         opacity: 0.6;
     }
+}
+.login{
+  &:hover{
+    background-color: #0079D3;
+    color: aliceblue;
+    opacity: .4;
+  }
 }
