hidding error message

--- a/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
@@ -33,7 +33,7 @@
                           </button>
                           <span style="padding-left: 15px">New to SpringReddit? <a routerLink="/signup">SIGN UP</a></span>
                       </span>
-                      <div class="login-failed">
+                      <div class="login-failed" hidden="true">
                            <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
                       </div>
                   </form>
