--- a/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
@@ -33,8 +33,14 @@
                           </button>
                           <span style="padding-left: 15px">New to SpringReddit? <a routerLink="/signup">SIGN UP</a></span>
                       </span>
-                      <div class="login-failed" hidden="true">
-                           <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
+                      <div class="login-failed" *ngIf='this.isError'>
+                           <p class="login-failed-text">
+                             Login Failed. Please check your credentials and try again.
+                            </p>
+                      </div>
+                      <div class="login-failed" [ngStyle]="{'background-color': 'green'}"
+                      *ngIf="this.registerSuccessMessage.length > 0">
+                        <p class="register-success-text">{{registerSuccessMessage}}</p>
                       </div>
                   </form>
               </div>
