--- a/Tutorials/redditclone/reddit-frontend/src/styles.scss
+++ b/Tutorials/redditclone/reddit-frontend/src/styles.scss
@@ -3,3 +3,11 @@
 input.ng-invalid.ng-touched{
   border: 1px solid red;
 }
+html{
+  padding: 0;
+  height: 100;
+}
+body{
+  margin-top: 63px;
+  height: 100;
+}
