--- a/Tutorials/redditclone/reddit-frontend/src/app/post/post-tile/post-tile.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/post-tile/post-tile.component.html
@@ -5,8 +5,8 @@
   <div class="col-md-11">
     <span class="subreddit-info">
       <span class="subreddit-text"><a class="posturl" routerLink="">{{post.subredditName}}</a></span>
-      <span> . Posted by <a class="username" routerLink="/user/{{post.userName}}">{{post.userName}}</a></span>
-      <span> . {{post.duration}}</span>
+      <span> Posted by <a class="username" routerLink="/user/{{post.userName}}">{{post.userName}}</a></span>
+      <span> {{post.duration}}</span>
     </span>
     <hr />
     <div class="post-title">
