--- a/Tutorials/redditclone/reddit-frontend/src/app/post/subreddit-side-bar/subreddit-side-bar.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/subreddit-side-bar/subreddit-side-bar.component.html
@@ -1,1 +1,11 @@
-<p>subreddit-side-bar works!</p>
+<div class="sidebar-view-subreddit">
+  <div class="black fw-bold">Browse Subreddits</div>
+  <hr />
+  <span *ngFor="let subreddit of subreddits">
+      <span class="subreddit-text"><a href="/view-subreddit/{{subreddit.id}}">{{subreddit.name}}</a></span>
+      <hr />
+  </span>
+  <div class="center" *ngIf="displayViewAll">
+      <a class="fw-bold" routerLink="/subreddits">View All</a>
+  </div>
+</div>
