modifying home component

--- a/Tutorials/redditclone/reddit-frontend/src/app/home/home/home.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/home/home/home.component.html
@@ -6,6 +6,8 @@
         <app-post-tile></app-post-tile>
       </div>
       <div class="col-md-3">
+        <app-side-bar></app-side-bar>
+        <app-subreddit-side-bar></app-subreddit-side-bar>
       </div>
     </div>
   </div>
