adding subreddit side bar

--- a/Tutorials/redditclone/reddit-frontend/src/app/post/subreddit-side-bar/subreddit-side-bar.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/subreddit-side-bar/subreddit-side-bar.component.html
@@ -2,7 +2,7 @@
   <div class="black fw-bold">Browse Subreddits</div>
   <hr />
   <span *ngFor="let subreddit of subReddits">
-      <span class="subreddit-text"><a href="/view-subreddit/{{subreddit.id}}">{{subreddit.name}}</a></span>
+      <span class="subreddit-text"><a href="/view-subreddit/{{subreddit.id}}">{{subreddit.subRedditName}}</a></span>
       <hr />
   </span>
   <div class="center" *ngIf="displayViewAll">
