fixing style thing

--- a/Tutorials/redditclone/reddit-frontend/src/app/post/side-bar/side-bar.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/side-bar/side-bar.component.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <img alt="reddit img" src="https://www.redditstatic.com/desktop2x/img/id-cards/home-banner@2x.png">
-  <div class="center fs-1">Welcome to Spring Reddit Clone home page. Come here to
+  <div class="center fs-1em">Welcome to Spring Reddit Clone home page. Come here to
       check in with your favorite subreddits.</div>
   <div class="center">
       <button class="btnCreatePost" (click)="goToCreatePost()">Create Post</button>
