--- a/Tutorials/redditclone/reddit-frontend/src/styles.scss
+++ b/Tutorials/redditclone/reddit-frontend/src/styles.scss
@@ -1,11 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./styles/letters";
 input.ng-invalid.ng-touched{
   border: 1px solid red;
 }
 html{
   padding: 0;
   height: 100;
+  font-size: 100%;
 }
 body{
   margin-top: 63px;
