--- a/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
@@ -3,7 +3,7 @@
       <div class="col-md-3"></div>
       <div class="col-md-6">
           <div class="card">
-              <div class="card-header" style="text-align: center"><h4>Login</h4></div>
+              <div class="card-header center"><h4>Login</h4></div>
               <div class="card-body">
                   <form [formGroup]="loginForm" (ngSubmit)="login()">
                       <div class="form-group row mb-4">
