--- a/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/auth/login/login.component.html
@@ -31,7 +31,7 @@
                           <button type="submit" class="login">
                               Login
                           </button>
-                          <span style="padding-left: 15px">New to SpringReddit? <a routerLink="/signup">SIGN UP</a></span>
+                          <span class="ps-1">New to SpringReddit? <a routerLink="/signup">SIGN UP</a></span>
                       </span>
                       <div class="login-failed" *ngIf='this.isError'>
                            <p class="login-failed-text">
