--- a/Tutorials/redditclone/reddit-frontend/src/app/auth/signup/signup.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/auth/signup/signup.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header" style="text-align: center">
+                <div class="card-header center">
                     <h4>Register</h4>
                 </div>
                 <div class="card-body">
@@ -21,9 +21,9 @@
                         </div>
 
                         <div class="form-group row mb-4">
-                            <label class="col-md-4 col-form-label text-md-right">User Name</label>
+                            <label for="username" class="col-md-4 col-form-label text-md-right">User Name</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control" formControlName="username" required autofocus>
+                                <input id="username" type="text" class="form-control" formControlName="username" required autofocus>
                                 <span *ngIf="!signupForm.get('username')?.valid && signupForm.get('username')?.touched">
                                   Please provide a valid username
                                 </span>
@@ -44,7 +44,7 @@
                             <button type="submit" class="sign-up" [disabled]="!signupForm.valid">
                                 Sign Up
                             </button>
-                            <span style="padding-left: 15px">Existing user? <a routerLink="/login">Log In</a></span>
+                            <span class="ps-1">Existing user? <a routerLink="/login">Log In</a></span>
                         </span>
                     </form>
                 </div>
