--- a/Tutorials/redditclone/reddit-frontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
@@ -1,6 +1,6 @@
 <div class="container reddit-body">
   <div class="row">
-    <div class="create-subreddit-container">
+    <div class="create-subreddit-container col-md-9">
       <form class="post-form" [formGroup]="createSubredditForm" (ngSubmit)="createSubreddit()">
         <div class="form-group">
           <div class="create-subreddit-heading">Create Subreddit</div>
