--- a/Tutorials/redditclone/reddit-frontend/src/app/post/create-post/create-post.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/create-post/create-post.component.html
@@ -1,1 +1,48 @@
-<p>create-post works!</p>
+<div class="container reddit-body">
+  <div class="row">
+    <hr />
+    <div class="create-post-container col-md-9">
+      <form class="post-form" [formGroup]="createPostForm" (ngSubmit)="createPost()">
+        <div class="form-group">
+          <div class="create-post-heading">Create Post</div>
+          <hr />
+          <input type="text" [formControlName]="'postName'" class="form-control mt-2"
+            placeholder="Title">
+
+          <input type="text" class="form-control mt-2" formControlName="url" placeholder="URL">
+          <label for="subredditName" class="mt-2">Select Subreddit</label>
+          <select class="form-control"  formControlName="subredditName" id="subredditName">
+            <option value="" selected disabled>Select Subreddit</option>
+            <option *ngFor="let subreddit of subreddits">{{subreddit.subRedditName}}</option>
+          </select>
+
+          <editor [formControlName]="'description'" [init]="{
+                      height: 500,
+                      menubar: false,
+                      plugins: [
+                        'advlist autolink lists link image charmap print preview anchor',
+                        'searchreplace visualblocks code fullscreen',
+                        'insertdatetime media table paste code help wordcount'
+                      ],
+                      toolbar:
+                        'undo redo | formatselect | bold italic backcolor | \
+                        alignleft aligncenter alignright alignjustify | \
+                        bullist numlist outdent indent | removeformat | help'
+                    }"></editor>
+          <span>
+            <div class="float-right mt-2">
+              <button type="button" (click)="discardPost()" class="btnDiscard">Discard</button>
+              <button type="submit" class="btnCreatePost">Post</button>
+            </div>
+          </span>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-3">
+      <!--
+      <guidelines></guidelines>
+      <about></about>
+    -->
+    </div>
+  </div>
+</div>
