--- a/Tutorials/redditclone/reddit-frontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
@@ -19,15 +19,7 @@
       </form>
     </div>
     <div class="col-md-3">
-      <div class="sidebar">
-        <h5 class="guidelines">Posting to Spring Reddit</h5>
-        <hr />
-        <ul>
-          <li>Remember the human <hr/></li>
-          <li>Behave like you would in real life <hr/></li>
-          <li>Don't spam <hr/></li>
-        </ul>
-      </div>
+      <app-guidelines></app-guidelines>
     </div>
   </div>
 </div>
