--- a/Tutorials/redditclone/reddit-frontend/src/app/post/create-post/create-post.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/create-post/create-post.component.html
@@ -39,8 +39,8 @@
       </form>
     </div>
     <div class="col-md-3">
+      <app-guidelines></app-guidelines>
       <!--
-      <guidelines></guidelines>
       <about></about>
     -->
     </div>
