--- a/Tutorials/redditclone/reddit-frontend/src/app/post/post-tile/post-tile.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/post-tile/post-tile.component.html
@@ -4,7 +4,7 @@
   <!-- Section to Display Post Information-->
   <div class="col-md-11">
     <span class="subreddit-info">
-      <span class="subreddit-text"><a class="posturl" routerLink="">{{post.subredditName}}</a></span>
+      <span class="subreddit-text"><a class="posturl" routerLink="">{{post.subRedditName}}</a></span>
       <span> Posted by <a class="username" routerLink="/user/{{post.userName}}">{{post.userName}}</a></span>
       <span> {{post.duration}}</span>
     </span>
@@ -21,7 +21,7 @@
         <fa-icon [icon]="faComments"></fa-icon>
         Comments({{post.commentCount}})
       </a>
-      <button class="login" (click)="goToPost(post.id)">
+      <button class="ms-1 login" (click)="goToPost(post.id)">
         Read Post
       </button>
     </span>
