--- a/Tutorials/redditclone/reddit-frontend/src/app/post/view-post/view-post.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/view-post/view-post.component.html
@@ -4,22 +4,42 @@
     <div class="col-md-9">
       <div class="row post">
         <div class="col-md-1">
-          <app-vote-button [post]="post$"></app-vote-button>
+          <app-vote-button [post]="post"></app-vote-button>
         </div>
         <div class="col-md-11">
           <span>
-            <span class="subreddit-text"><a class="post-url" href="">{{post$.subRedditName}}</a><br></span>
-            <span>Posted
-                <span> {{post$.duration}} </span>
-                by
-              <a *ngIf="post$.userName === null" class="username" href="">Anonymous</a>
-              <a *ngIf="post$.userName != null" class="username" href="">{{post$.userName}}</a>
+            <span class="subreddit-text"><a class="post-url" href="">{{post.subRedditName}}</a></span>
+            <span> . Posted
+              <span> {{post.duration}} </span>
+              by
+              <a *ngIf="post.userName === null" class="username" href="">Anonymous</a>
+              <a *ngIf="post.userName != null" class="username" href="">{{post.userName}}</a>
             </span>
           </span>
           <hr />
-          <a routerLink="post$.url" class="post-title">{{post$.postName}}</a>
+          <a routerLink="post.url" class="post-title">{{post.postName}}</a>
           <div>
-            <p class="post-text" [innerHtml]="post$.description"></p>
+            <p class="post-text" [innerHtml]="post.description"></p>
+          </div>
+          <div class="post-comment">
+            <form [formGroup]="commentForm" (ngSubmit)="postComment()">
+              <div class="form-group">
+                <textarea class="form-control" [formControlName]="'text'" placeholder="Your Thoughts?"></textarea>
+              </div>
+              <button type="submit" class="login float-right">Comment</button>
+            </form>
+          </div>
+          <div class="mt-3" *ngFor="let comment of comments">
+            <div class="comment">
+              <div class="username">
+                <a routerLink="/user/comment.username">{{comment.username}}</a>
+              </div>
+              <div>
+                <p>{{comment.duration}}</p>
+              </div>
+              <b>{{comment.text}}</b>
+            </div>
+            <hr />
           </div>
         </div>
       </div>
