--- a/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.html
@@ -13,8 +13,20 @@
             </a>
         </div>
         <div class="float-right">
-            <a routerLink="/signup" class="float-right signup me-2">Sign up</a>
-            <a routerLink="/login" class="float-right login mr-2">Login</a>
-        </div>
+          <div *ngIf="isLoggedIn" ngbDropdown class="float-right">
+              <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                  <button routerLink="/user-profile" ngbDropdownItem>Profile</button>
+                  <button (click)="logout()" ngbDropdownItem>Logout</button>
+              </div>
+              <button class="userdetails" id="dropdownBasic1" ngbDropdownToggle>
+                  <img alt="user icon" class="account-icon" src="https://www.redditstatic.com/avatars/avatar_default_08_D4E815.png">
+                  {{username}}
+              </button>
+          </div>
+          <div *ngIf="!isLoggedIn">
+              <a routerLink="/signup" class="float-right sign-up mr-2">Sign up</a>
+              <a routerLink="/login" class="float-right login mr-2">Login</a>
+          </div>
+      </div>
     </nav>
 </header>
