--- a/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/header/header.component.html
@@ -12,9 +12,9 @@
                 <span class="reddit-text">Spring Reddit Clone</span>
             </a>
         </div>
-        <div class="float-right">
-          <div *ngIf="isLoggedIn" ngbDropdown class="float-right">
-              <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+        <div class="float-end">
+          <div *ngIf="isLoggedIn" ngbDropdown display="dynamic">
+              <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-menu-end">
                   <button (click)="goToUserProfile()" ngbDropdownItem>Profile</button>
                   <button (click)="logout()" ngbDropdownItem>Logout</button>
               </div>
@@ -24,8 +24,8 @@
               </button>
           </div>
           <div *ngIf="!isLoggedIn">
-              <a routerLink="/signup" class="float-right sign-up mr-2">Sign up</a>
-              <a routerLink="/login" class="float-right login mr-2">Login</a>
+              <a routerLink="/signup" class="float-end signup mr-2">Sign up</a>
+              <a routerLink="/login" class="float-end login mr-2">Login</a>
           </div>
       </div>
     </nav>
