--- a/Tutorials/redditclone/reddit-frontend/src/app/post/view-post/view-post.component.html
+++ b/Tutorials/redditclone/reddit-frontend/src/app/post/view-post/view-post.component.html
@@ -26,9 +26,10 @@
               <div class="form-group">
                 <textarea class="form-control" [formControlName]="'text'" placeholder="Your Thoughts?"></textarea>
               </div>
-              <button type="submit" class="login float-right" [disabled]="commentForm.invalid">Comment</button>
+              <button type="submit" class="login float-end" [disabled]="commentForm.invalid">Comment</button>
             </form>
           </div>
+          <br>
           <div class="mt-3" *ngFor="let comment of comments">
             <div class="comment">
               <div class="username">
